--- a/index.html
+++ b/index.html
@@ -1,60 +1,7 @@
 <html>
-    <head>
-       <title>Best Pets</title>  
-  <style>
-	     img{
-		    width:250px;
-        height:250px;
-
-			}
-			h1{font-size: 75px;}
-
-      .header {
-          display:flex;
-          justify-content: space-around;
-          flex-direction: row;
-          align-items: center;
-          background-color:rgb(20, 20, 124);
-          height:80px;
-         }
-
-         body {
-            margin: 0;
-            font-family: verdana, gerneva, tohama, sans serif;
-            color: rgb(0, 0, 0);
-            height: 100%;
-         }
-
-         li {
-           justify-content: block;
-           padding: 0px 20px 0px 20px;
-           text-decoration: none;
-            list-style-type: none;
-           cursor: pointer;
-         }
-
-         ul{
-           display: flex;
-          justify-content: block;
-          padding: 0px 20px 0px 20px;
-          text-decoration: none;
-         }
-
-         main{
-            background-color: aliceblue;
-            height: vh70;
-         }
-
-
-  </style>
-</head>
-<body>
-     <h1> Só os melhores </h1>    
-     <img src='Img/img-1.jpg'>
-	 
-     <img src='Img/img-2.jpg'>
-	
-     <img src='Img/img-3.jpg'>
-      
-</body>
+      <body>
+	   <h1>
+              opaa
+	   </h1>
+      </body>
 </html>
