--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
                     <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Café</a>
+                    <a href="#">Contato</a>
                 </li>
                 <li>
-                    <a href="#">Contato</a>
+                    <a href="#">Doações</a>
+                </li>
+                <li>
+                    <a href="#">Logar</a>
                 </li>
             </ul>
         </nav>
